Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.h
@@ -306,9 +306,9 @@ private:
 #endif
 
 #if PLATFORM(COCOA)
-    void elementDidFocus(WebCore::Element&) final;
+    void elementDidFocus(WebCore::Element&, const WebCore::FocusOptions&) final;
     void elementDidBlur(WebCore::Element&) final;
-    void elementDidRefocus(WebCore::Element&) final;
+    void elementDidRefocus(WebCore::Element&, const WebCore::FocusOptions&) final;
     void focusedElementDidChangeInputMode(WebCore::Element&, WebCore::InputMode) final;
 
     void makeFirstResponder() final;
